# pavuk-engine

./: .gitignore  CMakeLists.txt  LICENSE.md  Pavuk.sln  Pavuk.vcxproj  Pavuk.vcxproj.filters  README.md
docs/: shadow_cubemap_faces.md
include/: json.hpp
models/bird_yellow_billed_shrike/: bird_shrike1.mtl
resources/: materials.json  meshes.json  models.json
resources/data/: meshes.json
resources/models/: home.mtl  maphome.mtl
shaders/: compile.bat  debug.vert  debug_vert.spv  frag.spv  shader.frag  shader.frag.spv  shader.vert  shadow.frag  shadow.vert  shadow_frag.spv  shadow_vert.spv  vert.spv
shaders/shadows/: shader.frag  shader.vert
shaders/shadows/cube/: frag.spv  shader.frag  vert.spv
src/: main.cpp
src/Engine/: Game.cpp  Game.h  MaterialManager.cpp  MaterialManager.h
src/Engine/ECS/: Component.h  ComponentManager.cpp  ComponentManager.h  ComponentMap.cpp  ComponentMap.h  ECSManager.cpp  ECSManager.h  Entity.h  EntityManager.cpp  EntityManager.h  System.cpp  System.h  SystemManager.cpp  SystemManager.h
src/Engine/ECS/Components/: CameraComponent.h  GirlComponent.h  InputComponent.h  PointLightComponent.h  RenderComponent.h  RotateComponent.h  ShadowComponent.h  TransformComponent.cpp  TransformComponent.h
src/Engine/ECS/Systems/: CameraControllerSystem.cpp  CameraControllerSystem.h  LightControllerSystem.cpp  LightControllerSystem.h  LoadMeshSystem.cpp  LoadMeshSystem.h  RenderSystem.cpp  RenderSystem.h  RotateSystem.cpp  RotateSystem.h  SetInputSystem.cpp  SetInputSystem.h  ShadowSystem.cpp  ShadowSystem.h  SimpleControllerSystem.cpp  SimpleControllerSystem.h  System.h  TestSystem.cpp  TestSystem.h  UpdateLightSystem.cpp  UpdateLightSystem.h  UpdateTransformSystem.cpp  UpdateTransformSystem.h  UpdateVisibilitySystem.cpp  UpdateVisibilitySystem.h
src/Engine/Input/: InputManager.cpp  InputManager.h
src/Engine/Render/: Material.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  UniformBufferObject.h  Vertex.cpp  Vertex.h
src/Engine/ResourceManagers/: MaterialManager.cpp  MaterialManager.h  MeshManager.cpp  MeshManager.h
src/Engine/Scene/: Mesh.cpp  Mesh.h  Scene.cpp  Scene.h
src/Engine/World/: Mesh.cpp  World.cpp  World.h
src/Scene/: Scene.cpp  Scene.h
